working on chat stream
